--- a/.env
+++ b/.env
@@ -18,3 +18,8 @@
 APP_ENV=dev
 APP_SECRET=f002c7b679842fc3e7e078f0d723172c
 ###< symfony/framework-bundle ###
+
+###> jonbk/symfony-ledger ###
+LEDGER_API_KEY=your_api_key
+###< jonbk/symfony-ledger ###
+
