--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,15 @@
         "symfony/security-bundle": "7.1.*",
         "symfony/yaml": "7.1.*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "7.1.*",
+        "symfony/css-selector": "7.1.*",
+        "symfony/maker-bundle": "^1.61",
+        "symfony/phpunit-bridge": "^7.1",
+        "symfony/stopwatch": "7.1.*",
+        "symfony/web-profiler-bundle": "7.1.*"
+    },
     "config": {
         "allow-plugins": {
             "php-http/discovery": true,
