--- a/.env
+++ b/.env
@@ -1,25 +1,17 @@
-# In all environments, the following files are loaded if they exist,
-# the latter taking precedence over the former:
-#
-#  * .env                contains default values for the environment variables needed by the app
-#  * .env.local          uncommitted file with local overrides
-#  * .env.$APP_ENV       committed environment-specific defaults
-#  * .env.$APP_ENV.local uncommitted environment-specific overrides
-#
-# Real environment variables win over .env files.
-#
-# DO NOT DEFINE PRODUCTION SECRETS IN THIS FILE NOR IN ANY OTHER COMMITTED FILES.
-# https://symfony.com/doc/current/configuration/secrets.html
-#
-# Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
-# https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
-
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=f002c7b679842fc3e7e078f0d723172c
 ###< symfony/framework-bundle ###
 
+###< aws/aws-sdk-php ###
+AWS_DYNAMODB_ENDPOINT=http://dynamodb:8000
+AWS_REGION=local
+###> aws/aws-sdk-php ###
+
 ###> jonbk/symfony-ledger ###
 LEDGER_API_KEY=your_api_key
+LEDGER_TABLE_NAME=table_name
+LEDGER_SIGNATURE_PUBLIC_KEY=your_public_key
+LEDGER_SIGNATURE_PRIVATE_KEY=your_private_key
 ###< jonbk/symfony-ledger ###
 
