--- a/.env
+++ b/.env
@@ -3,15 +3,12 @@ APP_ENV=dev
 APP_SECRET=f002c7b679842fc3e7e078f0d723172c
 ###< symfony/framework-bundle ###
 
-###< aws/aws-sdk-php ###
-AWS_DYNAMODB_ENDPOINT=http://dynamodb:8000
-AWS_REGION=local
-###> aws/aws-sdk-php ###
+###> doctrine/doctrine-bundle ###
+DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+###< doctrine/doctrine-bundle ###
 
 ###> jonbk/symfony-ledger ###
 LEDGER_API_KEY=your_api_key
-LEDGER_TABLE_NAME=table_name
 LEDGER_SIGNATURE_PUBLIC_KEY=your_public_key
 LEDGER_SIGNATURE_PRIVATE_KEY=your_private_key
 ###< jonbk/symfony-ledger ###
-
