--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-openssl": "*",
-        "aws/aws-sdk-php": "^3.322",
-        "ramsey/uuid": "^4.7",
+        "doctrine/dbal": "^3",
+        "doctrine/doctrine-bundle": "^2.13",
+        "doctrine/doctrine-migrations-bundle": "^3.3",
+        "doctrine/orm": "^3.2",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "7.1.*",
         "symfony/dotenv": "7.1.*",
@@ -19,6 +21,7 @@
         "symfony/monolog-bundle": "^3.10",
         "symfony/runtime": "7.1.*",
         "symfony/security-bundle": "7.1.*",
+        "symfony/uid": "7.1.*",
         "symfony/yaml": "7.1.*"
     },
     "require-dev": {
@@ -76,7 +79,8 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "7.1.*"
+            "require": "7.1.*",
+            "docker": true
         }
     }
 }
