--- a/.env
+++ b/.env
@@ -3,6 +3,10 @@ APP_ENV=dev
 APP_SECRET=f002c7b679842fc3e7e078f0d723172c
 ###< symfony/framework-bundle ###
 
+###> symfony/lock ###
+LOCK_DSN=flock
+###< symfony/lock ###
+
 ###> doctrine/doctrine-bundle ###
 DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
