--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,11 @@
-.git
-http
-vendor
-.env
-.env.local
-.env.test
-Dockerfile
-compose.yaml
-Makefile
-README.md
-.gitignore
+/.git
+/http
+/vendor
+/.env
+/.env.local
+/.env.test
+/Dockerfile
+/compose.yaml
+/Makefile
+/README.md
+/.gitignore
