--- a/compose.yaml
+++ b/compose.yaml
@@ -3,6 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      target: base
     volumes:
       - .:/var/www/html
     environment:
