--- a/compose.yaml
+++ b/compose.yaml
@@ -10,6 +10,8 @@ services:
       VIRTUAL_HOST: ledger.localhost
     expose:
       - 80
+    ports:
+      - "8081:80"
     networks:
       - reverse-proxy
       - default
